Adjustements on many elements on background , box-shadow , font-weight and size of section-2,3 and 5

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@
   /* END OF HEADER */
   /* SECTION - 1 */
   .location {
-    background-color: #E8E8E8;
+    background-color: #EAEAEA;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -157,8 +157,8 @@
     margin-bottom: 15px;
     padding: 1.5em 1.9em;
     width: 240px;
-    -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
-            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
     position: relative;
     left: 65px;
   }
@@ -193,7 +193,7 @@
   /* END SECTION -3 */
   /* SECTION -4 */
   .section-4 {
-    background: #F0F0F0;
+    background: #F6F6F6;
     padding-bottom: 3em;
   }
   .food_cards {
@@ -231,6 +231,8 @@
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
+    -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.21);
+            box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.21);
     color: black;
   }
   .item-2 .new_food {
@@ -244,7 +246,7 @@
     font-size: 0.8em;
   }
   .item-2 .description_food {
-    padding: 10px 0px 5px 10px;
+    padding: 10px 0px 5px 14px;
     line-height: 24px;
   }
   .item-2 .description_food p {
@@ -297,6 +299,7 @@
     position: relative;
     right: 42px;
     margin-top: 1em;
+    font-weight: 500;
     font-size: 1.2em;
   }
   .icon_description {
@@ -396,7 +399,7 @@
     font-size: 0.8em;
   }
   .item-2 .description_food {
-    padding: 10px 0px 5px 10px;
+    padding: 10px 0px 5px 14px;
     line-height: 20px;
   }
   .item-2 .description_food p {
