--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -1,16 +1,101 @@
 /* Shrikhand Regular 400*/
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Shrikhand&display=swap');
-/* Roboto Light 300 italic */
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto:ital,wght@1,300&family=Shrikhand&display=swap');
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-$primary_color : #9356DC;
+/* Roboto Bold 700 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+$primary_color:#9356DC;
 $secondary_color : #FF79DA;
 $tertiary_color:#99E2D0;
 $FShrikhand: 'Shrikhand', cursive;
 $FRoboto : 'Roboto', sans-serif;
+$bg-footer: #353535;
+$white : white;
+
 
 *{
     margin: 0;
     padding: 0;
     text-decoration: none;
+    list-style-type:none;
+}
+
+/* MOBILE */
+@media screen and (min-width:320px) and (max-width:767px)
+{
+        /* FOOTER 
+
+        footer
+        {
+            background-color: $bg-footer;
+            color:$white;
+        }
+    
+        .more_information
+        {
+                display: flex;
+                flex-direction: column;
+                font-family: $FRoboto;
+                align-items: center;
+                gap:10px;
+                position: relative;
+                right: 4.5em;
+                
+                & h1
+                {
+                    font-family: $FShrikhand;
+                    margin-bottom: 0.5em;
+                    position:relative;
+                    right:42px;
+                    margin-top: 1em;
+                    font-weight:500;
+                    font-size: 1.2em;
+                }
+        }
+    
+        .icon_description
+        {
+            display: flex;
+            gap:10px;
+            font-size: 1em;
+    
+                    & .fas
+                    {
+                        position: relative;
+                        top:2px;
+                        font-size: 0.9em;
+                    }
+    
+        }
+    
+        .icon_description--2
+        {
+                display:flex;
+                gap:10px;
+                position:relative;
+                right:20px;
+                font-size: 1em;
+    
+                    & .fas
+                    {
+                        position: relative;
+                        top:2px;
+                        font-size: 0.9em;
+                        
+                    }
+        }
+    
+        .list{
+            position: relative;
+            right:39px;
+            font-size: 1em;
+    
+                & li {
+                    line-height: 30px;
+                }
+        }
+    
+    
+        */
 }
