--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -14,88 +14,62 @@ $bg-footer: #353535;
 $white : white;
 
 
-*{
+
+{
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style-type:none;
 }
 
-/* MOBILE */
-@media screen and (min-width:320px) and (max-width:767px)
-{
-        /* FOOTER 
 
-        footer
-        {
-            background-color: $bg-footer;
-            color:$white;
-        }
-    
-        .more_information
-        {
-                display: flex;
-                flex-direction: column;
-                font-family: $FRoboto;
-                align-items: center;
-                gap:10px;
+*:visited
+{
+    color:#353535;
+}
+
+@media screen and (min-width: 320px) and (max-width:767px)
+{
+   /* HEADER */
+
+    .back_to_homepage
+    {
+        display:flex;
+        justify-content: center;
+        font-family: $FShrikhand;
+        font-weight:thin;
+        padding-block: 0.6em;
+        
+            & .fas 
+            {
+                font-size:1.5em;
                 position: relative;
-                right: 4.5em;
-                
-                & h1
-                {
-                    font-family: $FShrikhand;
-                    margin-bottom: 0.5em;
-                    position:relative;
-                    right:42px;
-                    margin-top: 1em;
-                    font-weight:500;
-                    font-size: 1.2em;
+                right:1.5em;
+                top:0.3em;
+            }
+
+            & h1 {
+                font-size:1.5em;
+            }
+    }
+
+  
+   /* END OF HEADER */
+
+   .container
+   {
+       width: 100%;
+
+        & .banner {
+            width: 100%;
+
+                & img {
+                    width: 100%;
                 }
         }
-    
-        .icon_description
-        {
-            display: flex;
-            gap:10px;
-            font-size: 1em;
-    
-                    & .fas
-                    {
-                        position: relative;
-                        top:2px;
-                        font-size: 0.9em;
-                    }
-    
-        }
-    
-        .icon_description--2
-        {
-                display:flex;
-                gap:10px;
-                position:relative;
-                right:20px;
-                font-size: 1em;
-    
-                    & .fas
-                    {
-                        position: relative;
-                        top:2px;
-                        font-size: 0.9em;
-                        
-                    }
-        }
-    
-        .list{
-            position: relative;
-            right:39px;
-            font-size: 1em;
-    
-                & li {
-                    line-height: 30px;
-                }
-        }
-    
-    
-        */
+   }
+    footer{
+        display: none;
+    }
+
 }
