--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -38,6 +38,7 @@
     font-size: 1.5em;
   }
   /* END OF HEADER */
+  /* CONTAINER */
   .container {
     width: 100%;
   }
@@ -47,6 +48,45 @@
   .container .banner img {
     width: 100%;
   }
+  /* END OF CONTAINER */
+  /* FOOD_MENU */
+  .food_menu {
+    background-color: #F6F6F6;
+    padding-inline: 1.5em;
+    padding-top: 2em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    z-index: 1;
+    position: relative;
+    bottom: 10em;
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+  }
+  .food_menu header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .food_menu header h1 {
+    font-family: "Shrikhand", cursive;
+    font-weight: 500;
+    font-size: 1.8em;
+  }
+  .food_menu header .far {
+    font-size: 1.8em;
+    position: relative;
+    top: 0.20em;
+    left: 1.2em;
+  }
+  /* END OF MENU */
   footer {
     display: none;
   }
