--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -10,12 +10,13 @@ $secondary_color : #FF79DA;
 $tertiary_color:#99E2D0;
 $FShrikhand: 'Shrikhand', cursive;
 $FRoboto : 'Roboto', sans-serif;
+$bg-food_menu:#F6F6F6;
 $bg-footer: #353535;
 $white : white;
 
 
 
-{
+*{
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -48,7 +49,8 @@ $white : white;
                 top:0.3em;
             }
 
-            & h1 {
+            & h1
+            {
                 font-size:1.5em;
             }
     }
@@ -56,19 +58,61 @@ $white : white;
   
    /* END OF HEADER */
 
+   /* CONTAINER */
+
    .container
    {
        width: 100%;
-
-        & .banner {
-            width: 100%;
-
-                & img {
-                    width: 100%;
-                }
+       
+       & .banner 
+       {
+           width: 100%;
+           
+           & img 
+           {
+               width: 100%;
+            }
         }
-   }
-    footer{
+    }
+    
+    /* END OF CONTAINER */
+
+    /* FOOD_MENU */
+    .food_menu{
+        background-color:$bg-food_menu;
+        padding-inline:1.5em;
+        padding-top: 2em;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 1;
+        position: relative;
+        bottom:10em;
+        border-top-right-radius:50px;
+        border-top-left-radius:50px;
+            & header
+            {
+                display:flex;
+                    & h1
+                    {
+                        font-family: $FShrikhand;
+                        font-weight: 500;
+                        font-size: 1.8em;
+                    }
+
+                    & .far{
+                        font-size: 1.8em;
+                        position: relative;
+                        top:0.20em;
+                        left:1.2em;
+                    }
+
+            }
+    }
+    /* END OF MENU */
+
+    footer
+    {
         display: none;
     }
 
