--- a/css/main.css
+++ b/css/main.css
@@ -133,11 +133,11 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    /*align-items: center;*/
     position: relative;
-    right: 70px;
+    /*right:70px;*/
+    padding-left: 23px;
+    padding-right: 15px;
   }
   .functioning h1 {
     font-size: 1.3em;
@@ -156,11 +156,9 @@
     border-bottom-left-radius: 20px;
     margin-bottom: 15px;
     padding: 1.5em 1.9em;
-    width: 240px;
     -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
     position: relative;
-    left: 65px;
   }
   .item h2 {
     font-size: 1em;
@@ -204,27 +202,22 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     gap: 15px;
     padding-top: 3em;
     font-family: "Roboto", sans-serif;
-    position: relative;
-    right: 14px;
+    padding-right: 16px;
+    padding-left: 14px;
   }
   .food_cards h1 {
     font-size: 1.3em;
     position: relative;
-    right: 99px;
+    left: 4px;
   }
   .food_cards h2 {
     font-size: 1.2em;
   }
   .item-2 {
     position: relative;
-    /* Temporary size */
-    width: 315px;
     background-color: white;
     display: inline-block;
     border-top-right-radius: 20px;
@@ -286,12 +279,8 @@
         -ms-flex-direction: column;
             flex-direction: column;
     font-family: "Roboto", sans-serif;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     gap: 10px;
-    position: relative;
-    right: 4.5em;
+    margin-left: 4em;
   }
   .more_information h1 {
     font-family: "Shrikhand", cursive;
@@ -301,6 +290,7 @@
     margin-top: 1em;
     font-weight: 500;
     font-size: 1.2em;
+    cursor: pointer;
   }
   .icon_description {
     display: -webkit-box;
@@ -308,6 +298,9 @@
     display: flex;
     gap: 10px;
     font-size: 1em;
+    position: relative;
+    right: 2.5em;
+    cursor: pointer;
   }
   .icon_description .fas {
     position: relative;
@@ -320,8 +313,9 @@
     display: flex;
     gap: 10px;
     position: relative;
-    right: 20px;
+    right: 2.5em;
     font-size: 1em;
+    cursor: pointer;
   }
   .icon_description--2 .fas {
     position: relative;
@@ -332,6 +326,7 @@
     position: relative;
     right: 39px;
     font-size: 1em;
+    cursor: pointer;
   }
   .list li {
     line-height: 30px;
@@ -352,69 +347,6 @@
   .button {
     position: relative;
     right: 0;
-  }
-}
-
-@media screen and (max-width: 398px) {
-  .item {
-    padding: 1.5em 1.1em 1.4em 1.1em;
-    position: relative;
-    left: 70px;
-  }
-  .item span {
-    position: absolute;
-    top: 21px;
-  }
-  .item .fas {
-    position: relative;
-    left: 9px;
-  }
-  .functioning h1 {
-    margin-left: 48px;
-  }
-  .food_cards {
-    position: relative;
-    right: 0;
-  }
-  .food_cards h2 {
-    font-size: 0.9em;
-  }
-  .food_cards h1 {
-    position: relative;
-    right: 90px;
-  }
-  .item-2 {
-    position: relative;
-    /* Temporary size */
-    width: 300px;
-  }
-  .item-2 .new_food {
-    position: absolute;
-    right: 15px;
-    top: 15px;
-    color: green;
-    background-color: #99E2D0;
-    font-weight: bolder;
-    padding: 0.6em;
-    font-size: 0.8em;
-  }
-  .item-2 .description_food {
-    padding: 10px 0px 5px 14px;
-    line-height: 20px;
-  }
-  .item-2 .description_food p {
-    font-size: 0.9em;
-    padding-bottom: 5px;
-  }
-  .item-2 .heart_animation {
-    font-size: 1.4em;
-    position: absolute;
-    right: 19px;
-    bottom: 22px;
-  }
-  .more_information {
-    position: relative;
-    right: 3em;
   }
 }
 /*# sourceMappingURL=main.css.map */
