The button 'Explorez nos restaurants' have been redesigned and I think its pretty close to the assets

--- a/css/main.css
+++ b/css/main.css
@@ -101,22 +101,24 @@
     grid-area: b;
     padding: 0.9em 1.5em;
     border-radius: 30px;
-    background-image: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), color-stop(#D66CDA), to(#AD5EDB));
-    background-image: linear-gradient(to bottom right, #FF79DA, #D66CDA, #AD5EDB);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
+    background-image: linear-gradient(#FF79DA, #9356DC);
     margin-top: 10px;
     position: relative;
     right: 6px;
     cursor: pointer;
+    -webkit-box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
+            box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
+    /*
+            &:hover{
+                opacity: 0.9;
+                box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
+                transition:900ms;
+            }
+            */
   }
   .button a {
     color: white;
-  }
-  .button:hover {
-    opacity: 0.9;
-    -webkit-box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
-            box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
-    -webkit-transition: 900ms;
-    transition: 900ms;
   }
   /* END OF SECTION -2 */
   /* SECTION -3 */
