Another adjustements on the first button !

--- a/css/main.scss
+++ b/css/main.scss
@@ -133,12 +133,12 @@ $simulate_link_presence:pointer;
         grid-area:b;
         padding:0.9em 1.5em;
         border-radius: 30px;
-        background-image:linear-gradient($secondary_color,$primary_color);
+        /* Temporary */
+        background-image:linear-gradient(to bottom right,$secondary_color,$primary_color);
         margin-top:10px;
         position: relative;
         right:6px;
         cursor: pointer;
-        
         box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         
         
