--- a/css/main.css
+++ b/css/main.css
@@ -101,8 +101,9 @@
     grid-area: b;
     padding: 0.9em 1.5em;
     border-radius: 30px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
-    background-image: linear-gradient(#FF79DA, #9356DC);
+    /* Temporary */
+    background-image: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
+    background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
     margin-top: 10px;
     position: relative;
     right: 6px;
