Box shadow is changed on .item of palette_du_gout.html

--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -33,6 +33,10 @@ $item_margin_bottom:.8em;
 
 @media screen and (min-width: 320px) and (max-width:767px)
 {
+
+    body{
+        display:none;
+    }
    /* HEADER */
 
     .back_to_homepage
@@ -151,7 +155,7 @@ $item_margin_bottom:.8em;
             border-radius: $item_border_radius;
             padding:1em;
             margin-bottom: $item_margin_bottom;
-            box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+            box-shadow: 5px 5px 10px rgb(0 0 0 / 0.11);
         }
     }
     .desserts{
