--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -87,9 +87,9 @@ a:visited {
   }
   .food_menu header .far {
     font-size: 1.8em;
-    position: relative;
+    position: absolute;
     top: 0.20em;
-    left: 1.2em;
+    right: 1.2em;
     font-weight: 100;
   }
   .check_validate {
@@ -116,6 +116,10 @@ a:visited {
     position: relative;
     left: .6em;
     margin-bottom: .8em;
+    border-bottom: 1px solid #99E2D0;
+    border-width: 0.21em;
+    padding-bottom: .3em;
+    width: 2.6em;
   }
   .starter .item {
     display: -webkit-box;
@@ -150,6 +154,10 @@ a:visited {
     left: .6em;
     margin-bottom: .8em;
     margin-top: .8em;
+    border-bottom: 1px solid #99E2D0;
+    border-width: 0.21em;
+    padding-bottom: .3em;
+    width: 2.5em;
   }
   .main_course .item {
     display: -webkit-box;
@@ -185,6 +193,10 @@ a:visited {
     left: .6em;
     margin-bottom: .8em;
     margin-top: .8em;
+    border-bottom: 1px solid #99E2D0;
+    border-width: 0.21em;
+    padding-bottom: .3em;
+    width: 2.5em;
   }
   .desserts .item {
     display: -webkit-box;
@@ -288,6 +300,7 @@ a:visited {
     right: 39px;
     font-size: 1em;
     cursor: pointer;
+    margin-bottom: 2em;
   }
   .list li {
     line-height: 30px;
