--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -113,9 +113,9 @@ a:visited
 
                     & .far{
                         font-size: 1.8em;
-                        position: relative;
+                        position: absolute;
                         top:0.20em;
-                        left:1.2em;
+                        right:1.2em;
                         font-weight: 100;
                     
                     }
@@ -154,6 +154,10 @@ a:visited
                 position: relative;
                 left:.6em;
                 margin-bottom:.8em;
+                border-bottom:1px solid $tertiary_color;
+                border-width: 0.21em;
+                padding-bottom: .3em;
+                width: 2.6em;
             }
             & .item{
                 display:flex;
@@ -196,6 +200,10 @@ a:visited
                                         left:.6em;
                                         margin-bottom:.8em;
                                         margin-top: .8em;
+                                        border-bottom:1px solid $tertiary_color;
+                                        border-width: 0.21em;
+                                        padding-bottom: .3em;
+                                        width: 2.5em;
                                     }
                         
                                     & .item
@@ -236,6 +244,10 @@ a:visited
                                     left:.6em;
                                     margin-bottom:.8em;
                                     margin-top: .8em;
+                                    border-bottom:1px solid $tertiary_color;
+                                    border-width: 0.21em;
+                                    padding-bottom: .3em;
+                                    width: 2.5em;
                                 }
                         
                                 & .item
@@ -274,7 +286,7 @@ a:visited
                                 margin-top:10px;
                                 position: relative;
                                 text-align: center;
-                                cursor: pointer;
+                                cursor: $simulate_link_presence;
                                 box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         
         
@@ -359,8 +371,9 @@ a:visited
         right:39px;
         font-size: 1em;
         cursor: $simulate_link_presence;
-
-            & li {
+        margin-bottom: 2em;
+            & li
+            {
                 line-height: 30px;
             }
     }
