--- a/css/main.scss
+++ b/css/main.scss
@@ -422,6 +422,7 @@ $simulate_link_presence:pointer;
         position: relative;
         right:39px;
         font-size: 1em;
+        margin-bottom: 2em;
         cursor: $simulate_link_presence;
 
             & li {
