--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -93,7 +93,6 @@ a:visited {
     font-weight: 100;
   }
   .check_validate {
-    visibility: hidden;
     position: absolute;
     right: 0;
     background-color: #99E2D0;
@@ -101,9 +100,24 @@ a:visited {
     border-top-right-radius: 20px;
     border-bottom-right-radius: 16px;
     top: 0;
+    -webkit-transition-property: padding-right,-webkit-transform;
+    transition-property: padding-right,-webkit-transform;
+    transition-property: padding-right,transform;
+    transition-property: padding-right,transform,-webkit-transform;
+    -webkit-transition-duration: 700ms;
+            transition-duration: 700ms;
+    -webkit-transition-timing-function: ease;
+            transition-timing-function: ease;
+  }
+  .check_validate:hover {
+    padding-right: 8em;
   }
   .check_validate .fa-check-circle {
     color: white;
+  }
+  .check_validate:hover > .fa-check-circle {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
   }
   /* STARTER */
   .starter {
