--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -96,7 +96,7 @@ a:visited {
     position: absolute;
     right: 0;
     background-color: #99E2D0;
-    padding: 2.08em;
+    padding: 1.73em;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 16px;
     top: 0;
@@ -106,18 +106,28 @@ a:visited {
     transition-property: padding-right,transform,-webkit-transform;
     -webkit-transition-duration: 700ms;
             transition-duration: 700ms;
-    -webkit-transition-timing-function: ease;
-            transition-timing-function: ease;
-  }
-  .check_validate:hover {
-    padding-right: 8em;
+    -webkit-transition-timing-function: ease-out;
+            transition-timing-function: ease-out;
+    /*
+               &:hover
+               {
+                    padding-right:8em;
+               }
+*/
   }
   .check_validate .fa-check-circle {
+    font-size: 1.8em;
     color: white;
+    -webkit-transition-duration: 700ms;
+            transition-duration: 700ms;
   }
-  .check_validate:hover > .fa-check-circle {
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
+  /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
+  .item:hover > .check_validate {
+    padding-right: 8em;
+  }
+  .item:hover > .check_validate > .fa-check-circle {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
   /* STARTER */
   .starter {
