--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -93,6 +93,7 @@ a:visited {
     font-weight: 100;
   }
   .check_validate {
+    visibility: hidden;
     position: absolute;
     right: 0;
     background-color: #99E2D0;
@@ -108,12 +109,6 @@ a:visited {
             transition-duration: 700ms;
     -webkit-transition-timing-function: ease-out;
             transition-timing-function: ease-out;
-    /*
-               &:hover
-               {
-                    padding-right:8em;
-               }
-*/
   }
   .check_validate .fa-check-circle {
     font-size: 1.8em;
@@ -122,12 +117,34 @@ a:visited {
             transition-duration: 700ms;
   }
   /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
+  @-webkit-keyframes rotation {
+    from {
+      -webkit-transform: rotate(-360deg);
+              transform: rotate(-360deg);
+    }
+    to {
+      -webkit-transform: rotate(0);
+              transform: rotate(0);
+    }
+  }
+  @keyframes rotation {
+    from {
+      -webkit-transform: rotate(-360deg);
+              transform: rotate(-360deg);
+    }
+    to {
+      -webkit-transform: rotate(0);
+              transform: rotate(0);
+    }
+  }
+  /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
   .item:hover > .check_validate {
-    padding-right: 8em;
+    visibility: visible;
+    padding-right: 3em;
   }
   .item:hover > .check_validate > .fa-check-circle {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    -webkit-animation: rotation 700ms ease-out;
+            animation: rotation 700ms ease-out;
   }
   /* STARTER */
   .starter {
