--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -128,7 +128,7 @@ a:visited
         
      .check_validate
      {
-        
+            visibility: hidden;
             position: absolute;
             right:0;
             background-color:$tertiary_color;
@@ -139,32 +139,45 @@ a:visited
             transition-property: padding-right,transform;
             transition-duration:700ms;
             transition-timing-function:ease-out;
-/*
-               &:hover
-               {
-                    padding-right:8em;
-               }
-*/
+
                & .fa-check-circle
                {
                     font-size:1.8em;
                    color:white;
                    transition-duration:700ms;
+                  
                }
              
+    }
+
+      /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
+    @keyframes rotation 
+    {
+            from
+            {
+                transform:rotate(-360deg);
+            }
+
+            to
+            {
+                transform:rotate(0);
+            }
     }
 
 
     /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
     .item:hover > .check_validate
     {
-         padding-right:8em;
+         visibility:visible;
+         padding-right:3em;
+         
     }
 
 
     .item:hover > .check_validate > .fa-check-circle
     {
-         transform:rotate(360deg);
+
+         animation: rotation 700ms ease-out;
 
     }
 
