--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -128,7 +128,7 @@ a:visited
         
      .check_validate
      {
-            visibility: hidden;
+            
             position: absolute;
             right:0;
             background-color:$tertiary_color;
@@ -136,10 +136,11 @@ a:visited
             border-top-right-radius: 20px;
             border-bottom-right-radius: 16px;
             top:0;
-            transition-property: padding-right,transform;
+            transition-property: width,transform;
             transition-duration:700ms;
             transition-timing-function:ease-out;
-
+            width:5%;
+            z-index:9999;
                & .fa-check-circle
                {
                     font-size:1.8em;
@@ -149,6 +150,8 @@ a:visited
                }
              
     }
+
+   
 
       /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
     @keyframes rotation 
@@ -160,6 +163,7 @@ a:visited
 
             to
             {
+            
                 transform:rotate(0);
             }
     }
@@ -168,8 +172,10 @@ a:visited
     /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
     .item:hover > .check_validate
     {
-         visibility:visible;
-         padding-right:3em;
+        
+         width:15%;
+         transition-duration: 2s;
+
          
     }
 
